<resources>
    <string name="english">en</string>
    <string name="hebrew">iw</string>
    <string name="hebrew_he">he</string>
    <string name="app_name">SmsToCalendar</string>
    <string name="setting">Setting</string>
    <string name="history">History</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>

    <string name="title_activity_settings">Settings</string>
    <string name="pref_smsEvent_service_enable">SmsEvent service enable</string>
    <string name="pref_smsEvent_service_disable">SmsEvent service disable</string>
    <string name="pref_general">General</string>
    <string name="pref_SmsEventService_title">SmsEvent Service</string>
    <string name="pref_SmsEventService_summary">Enable or Disable the main service</string>
    <string name="pref_appLanguage_title">App Language</string>
    <string name="pref_appLanguage_summary">Select the app language</string>
    <string name="pref_smsEventServiceLanguage_title">SmsEvent Service Language</string>
    <string name="pref_smsEventServiceLanguage_summary">Select the support languages for the SmsEvent service</string>
    <string name="pref_reminder">Reminder Settings</string>
    <string name="pref_allowReminder_title">Allow Reminder</string>
    <string name="pref_allowReminder_summary">Do you want to set an event reminder?</string>
    <string name="pref_minutesEventReminder_title">Schedule a reminder</string>
    <string name="pref_minutesEventReminder_summary">Select the number of minutes for an event reminder</string>
    <string name="pref_reminderMethod_title">Reminder Method</string>
    <string name="pref_reminderMethod_summary">Select the methods to receive the reminder</string>
    <string name="pref_delete_history_summery">Delete all history of smsEvents</string>
    <string name="pref_delete_history_title">Delete history</string>
    <string name="pref_are_you_sure_delete_history">Are you sure you want to delete history?</string>
    <string name="pref_personal_information">Personal Information</string>
    <string name="pref_home_address_title">Home Address</string>
    <string name="pref_home_address_summery">What is your home address?</string>
    <string name="pref_work_address_title">Work Address</string>
    <string name="pref_work_address_summery">What is your work address?</string>
    <string name="history_successfully_deleted">SmsEvents history successfully deleted</string>


    <string name="create_new_event_main_title">Create a new event</string>

    <string name="notification_title_1">You hava</string>
    <string name="notification_title_2">new smsEvents</string>
    <string name="toast_event_successfully">Event created successfully</string>
    <string name="toast_event_unsuccessfully">Event not created. please check log file</string>
    <string name="toast_smsEvent_without_reminder">Created new SmsEvent without Reminder. See App settings.</string>

    <string name="date">Date:</string>
    <string name="place">Place:</string>
    <string name="description">Description:</string>
    <string name="alert_meet_subject">The meeting topic</string>
    <string name="alert_place">Will take place at</string>
    <string name="start_time">Start:</string>
    <string name="end_time">End:</string>
    <string name="alert_date">on the date</string>

    <string name="details_title">SmsEvent Details</string>
    <string name="date_accepted">Date accepted</string>
    <string name="phone_number">Phone number</string>
    <string name="orig_message">Sms message</string>
</resources>

