<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Animation.AppCompat.Dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.NewSmsEventManual"
    android:id="@+id/create_new_event">
    <TextView
        android:id="@+id/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textColor="#000000"
        android:text="@string/create_new_event_main_title"
        android:textSize="18dp"
        android:layout_marginBottom="6dp"
        />
    <TextView
        android:id="@+id/event_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="4/6"
        android:textColor="@android:color/darker_gray" />
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/linearLayout1"
        android:background="@color/border"
        android:layout_below="@+id/main_title"
        android:layout_alignParentStart="true">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/mainBackground"
        android:layout_marginTop="3dp">
        <EditText
            android:id="@+id/in_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="9dp"
            android:text="Dentist appointment"
            android:textColor="@color/text_color"
            android:textSize="16dp"
            />
</LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/linearLayout2"
        android:background="@color/border"
        android:layout_below="@+id/linearLayout1"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/mainBackground"
            android:layout_marginTop="3dp">
        <ImageView
            android:id="@+id/calendar_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/calendar"
            android:background="@color/mainBackground"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="15dp"
           />
        <TextView
            android:id="@+id/in_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:inputType="date"
            android:text="12/10/2017"
            android:textColor="@color/text_color"
            android:background="@color/mainBackground"
            android:layout_marginTop="15dp"
            android:layout_marginStart="1dp"
            android:textSize="16dp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/linearLayout3"
        android:background="@color/border"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/mainBackground"
            android:layout_marginTop="3dp">
            <ImageView
                android:id="@+id/clock_icon_start"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                app:srcCompat="@drawable/clock"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/in_time_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:text="14:22"
                android:textColor="@color/text_color"
                android:textSize="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="1dp"
                />

            <ImageView
                android:id="@+id/clock_icon_end"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/clock"
                android:layout_marginTop="12dp"
                android:layout_marginStart="80dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_time"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/in_time_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:inputType="time"
                android:text="10:11"
                android:textColor="@color/text_color"
                android:textSize="16dp"
                android:layout_marginStart="1dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/linearLayout4"
        android:background="@color/border"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/mainBackground"
        android:layout_marginTop="3dp">
    <ImageView
        android:id="@+id/place_icon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:srcCompat="@drawable/place"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        />
    <EditText
        android:id="@+id/in_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:text="Hapnina 2 Rahana"
        android:textColor="@color/text_color"
        android:textSize="16dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="3dp"
  />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/linearLayout5"
        android:background="@color/border"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/mainBackground"
            android:layout_marginTop="3dp">
            <ImageView
                android:id="@+id/message_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/message"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="9dp"
                />
            <EditText
                android:id="@+id/in_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:inputType="textMultiLine"
                android:text="A queue was set for her mother to Dr. Gurevitch on 12/03/17 at 16:10 at the address of the Golani Brigade 8 Kfar Saba Please note that it is possible to summon and cancel an appointment for Dr. Gurevitch on the Maccabi website and the application."
                android:textColor="@color/text_color"
                android:textSize="14dp" />
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/new_event_Cancel"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/new_event_ok"
        android:layout_marginEnd="27dp" />

    <Button
        android:id="@+id/new_event_ok"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>